<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/signInLayout"
        android:layout_marginBottom="10dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:text="@string/sign_in" />

    <RelativeLayout
        android:id="@+id/signInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/card_white"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/card_background"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:background="@color/turquoise"
            android:textColor="#333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_default"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="@string/enter"/>

        <TextView
            android:id="@+id/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/card_white"
            android:layout_marginBottom="20dp"
            android:textSize="15dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:text="@string/enter_guest"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignTop="@+id/signInLayout"
        android:layout_alignBottom="@+id/signInLayout"
        android:layout_alignRight="@+id/signInLayout"
        android:layout_alignLeft="@+id/signInLayout"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/card_white2"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/card_grey"/>

        <EditText
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:background="@color/turquoise"
            android:textColor="#333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password2R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="#333"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_default"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/enter"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/change"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_add"
        android:layout_alignBottom="@+id/signInLayout"
        android:layout_alignLeft="@+id/signInLayout"
        android:layout_marginBottom="370dp"
        android:layout_marginLeft="270dp"
        android:scaleType="center"
        android:background="@drawable/circle_primary"/>

</RelativeLayout>