<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.33"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/tvYoutube"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvComment"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:padding="20dp"
        android:background="@drawable/card_stroke_primary_dark"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/primaryDark"
        android:text="@string/youtube_video" />

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl"
        app:layout_constraintStart_toEndOf="@id/tvYoutube"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/comment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/gl"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="10dp"
        android:background="@drawable/card_top_background">

        <EditText
            android:id="@+id/etField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/card_stroke_gray"
            android:inputType="text"
            android:maxLength="140"
            android:hint="@string/youtube_link"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etField"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:textStyle="italic"
            android:text="@string/youtube_link_des" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/viewBanner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="40dp"
            android:background="@drawable/chip_accent"
            android:textColor="@color/white"
            android:text="@string/send"/>

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

        <View
            android:id="@+id/viewBanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
